<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_calculation_settings_title" >
        <Preference
            android:defaultValue="@integer/defaultMenstrualCycleLen"
            android:key="pref_default_menstrual_cycle_len"
            android:summary="@string/pref_default_menstrual_cycle_len_summary"
            android:title="@string/pref_default_menstrual_cycle_len_title" />

        <CheckBoxPreference
            android:defaultValue="@bool/useAverage"
            android:key="pref_use_average"
            android:summary="@string/pref_use_average_summary"
            android:title="@string/pref_use_average_title" />
    </PreferenceCategory>

    <Preference android:title="@string/rate" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="market://details?id=com.anna.sent.soft.childbirthdate" />
    </Preference>

    <ListPreference
        android:defaultValue="@integer/defaultTheme"
        android:dialogTitle="@string/pref_theme_title"
        android:entries="@array/theme"
        android:entryValues="@array/theme_values"
        android:key="pref_theme"
        android:title="@string/pref_theme_title" />

</PreferenceScreen>